[package]
name = "engage_pro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
cargo-watch = "8.4.0"
dotenv = "0.15.0"
json = "0.12.4"
redis = "0.22.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tokio-postgres = "0.7.7"
tower-http = { version = "0.4.0", features = ["cors"] }
